--- a/Lab11_guess/Lab11_Report.tex
+++ b/Lab11_guess/Lab11_Report.tex
@@ -76,17 +76,17 @@ The purpose of this lab was to learn how to use the technique called Time-Divisi
 \begin{enumerate}
 		\item At what time in the simulation did the debounce circuit reach each of the four states?
 		\begin{enumerate}
-			\item 	state zero: , state wait1: , state one: , state wait0: 
+			\item 	state zero: 40ns, state wait1: 200ns , state one: 240ns , state wait0: 600ns 
 		\end{enumerate}
 	
 	\item Why can this game not be implemented with regular sequential logic?
 		\begin{enumerate}
-			\item 	state zero: , state wait1: , state one: , state wait0: 
+			\item 	Becasue regular sequential logic can't handle irregular, non-repeating conditions.
 		\end{enumerate}
 
 	\item What type of outputs did you use for your design(Mealy or Moore)? Explain.
 	\begin{enumerate}
-		\item 
+		\item Mealy becasue the ouput is determnined by the current state and the input values
 	\end{enumerate}
 \end{enumerate}
 
