--- a/Lab11_guess/Lab11_Report.tex
+++ b/Lab11_guess/Lab11_Report.tex
@@ -164,6 +164,89 @@ The purpose of this lab was to learn how to use the technique called Time-Divisi
 	\label{fig:sim_with_table}
 \end{figure}
 
+\begin{figure}[ht]\centering
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+	
+	\includegraphics{IMG_1301.JPG}
+	\caption{game #1 of Hard diffulcity }
+	\label{fig:sim_with_table}
+\end{figure}
+
+
 \clearpage
 \section*{Code}
 
