--- a/Lab11_guess/Lab11_Report.tex
+++ b/Lab11_guess/Lab11_Report.tex
@@ -150,10 +150,6 @@ The purpose of this lab was to learn how to use the technique called Time-Divisi
 		seg & X & 5f & 5f & 5f & 5f & 5f & 5f & 5f & 5f & 5f & 5f & 5f  \\
 		an & e & e & e & e & e & e & e & e & e & e & e & e  \\
 		led & X & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0  \\
-		\midule
-	
-		\midrule
-		
 		\bottomrule
 	\end{tabular}\medskip
 	
@@ -165,84 +161,84 @@ The purpose of this lab was to learn how to use the technique called Time-Divisi
 \end{figure}
 
 \begin{figure}[ht]\centering
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics[width=1\textheight]{IMG_1301.JPG}
+	\caption{game 1 of Hard diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1302.JPG}
+	\caption{game 2 of Hard diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1303.JPG}
+	\caption{game 3 of Hard diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1304.JPG}
+	\caption{game 4 of Hard diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1305.JPG}
+	\caption{game 5 of Hard diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1306.JPG}
+	\caption{game 6 of Hard diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1307.JPG}
+	\caption{game 7 of Hard diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1308.JPG}
+	\caption{game 8 of Hard diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1309.JPG}
+	\caption{game 9 of Hard diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1310.JPG}
+	\caption{game 10 of Hard diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1311.JPG}
+	\caption{game 1 of Easy diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1312.JPG}
+	\caption{game 2 of Easy diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1313.JPG}
+	\caption{game 3 of Easy diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1314.JPG}
+	\caption{game 4 of Easy diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1315.JPG}
+	\caption{game 5 of Easy diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1316.JPG}
+	\caption{game 6 of Easy diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1317.JPG}
+	\caption{game 7 of Easy diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1318.JPG}
+	\caption{game 8 of Easy diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1319.JPG}
+	\caption{game 9 of Easy diffulcity }
 	\label{fig:sim_with_table}
 	
-	\includegraphics{IMG_1301.JPG}
-	\caption{game #1 of Hard diffulcity }
+	\includegraphics{IMG_1320.JPG}
+	\caption{game 10 of Easy diffulcity }
 	\label{fig:sim_with_table}
 \end{figure}
 
