--- a/Lab11_guess/Lab11_Report.tex
+++ b/Lab11_guess/Lab11_Report.tex
@@ -88,6 +88,7 @@ The purpose of this lab was to learn how to use the technique called Time-Divisi
 	\begin{enumerate}
 		\item Mealy becasue the ouput is determnined by the current state and the input values
 	\end{enumerate}
+	\item On the hard diffculty I had a win percentage of 20 percent and on the easy diffculty I have a win percentage of 90 percent.
 \end{enumerate}
 
 
@@ -159,85 +160,108 @@ The purpose of this lab was to learn how to use the technique called Time-Divisi
 	\caption{guess FSM simulation waveform and ERT}
 	\label{fig:sim_with_table}
 \end{figure}
-
+\clearpage
 \begin{figure}[ht]\centering
-	\includegraphics[width=1\textheight]{IMG_1301.JPG}
+	\includegraphics[width=0.9\textwidth]{IMG_1301.jpg}
 	\caption{game 1 of Hard diffulcity }
 	\label{fig:sim_with_table}
+\end{figure}
+
+\clearpage
+\begin{figure}
+
 	
-	\includegraphics{IMG_1302.JPG}
+	\includegraphics[width=0.9\textwidth]{IMG_1302.jpg}
 	\caption{game 2 of Hard diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1303.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1303.jpg}
 	\caption{game 3 of Hard diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1304.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1304.jpg}
 	\caption{game 4 of Hard diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1305.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1305.jpg}
 	\caption{game 5 of Hard diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1306.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1306.jpg}
 	\caption{game 6 of Hard diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1307.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1307.jpg}
 	\caption{game 7 of Hard diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1308.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1308.jpg}
 	\caption{game 8 of Hard diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1309.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1309.jpg}
 	\caption{game 9 of Hard diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1310.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1310.jpg}
 	\caption{game 10 of Hard diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1311.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1311.jpg}
 	\caption{game 1 of Easy diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1312.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1312.jpg}
 	\caption{game 2 of Easy diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1313.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1313.jpg}
 	\caption{game 3 of Easy diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1314.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1314.jpg}
 	\caption{game 4 of Easy diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1315.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1315.jpg}
 	\caption{game 5 of Easy diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1316.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1316.jpg}
 	\caption{game 6 of Easy diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1317.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1317.jpg}
 	\caption{game 7 of Easy diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1318.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1318.jpg}
 	\caption{game 8 of Easy diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1319.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1319.jpg}
 	\caption{game 9 of Easy diffulcity }
 	\label{fig:sim_with_table}
-	
-	\includegraphics{IMG_1320.JPG}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=0.9\textwidth]{IMG_1320.jpg}
 	\caption{game 10 of Easy diffulcity }
 	\label{fig:sim_with_table}
 \end{figure}
